--- a/package.json
+++ b/package.json
@@ -1,53 +1,31 @@
 {
-  "name": "Backbone-Require-Boilerplate",
-  "title": "Backbone and Require Boilerplate",
-  "description": "A Backbone.js and Require.js Boilerplate that promotes decoupling your JavaScript into modules, separating business logic from application logic using Models and Views, reusing your JavaScript between Desktop and Mobile Web versions, including non-AMD Compatible Third Party Scripts in your project, and optimizing all of your JavaScript (minify, concatenate, etc).",
-  "version": "1.8.0",
-  "homepage": "https://github.com/gfranko/Backbone-Require-Boilerplate",
+  "name": "",
+  "title": "node-express-hogan-i18n-example",
+  "description": "Simple node express hogan i18n responsive app example",
+  "version": "0.0.1",
+  "homepage": "https://github.com/dondido/node-express-hogan-i18n-example",
   "author": {
-    "name": "Greg Franko",
-    "email": "gfranko5@yahoo.com",
-    "url": "http://www.gregfranko.com"
+    "name": "Dian Dimitrov",
+    "url": "http://lameculture.gamesurprise.com/"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:gfranko/Backbone-Require-Boilerplate.git"
+    "url": "https://github.com/dondido/node-express-hogan-i18n-example.git"
   },
-  "bugs": {
-    "url": "https://github.com/gfranko/Backbone-Require-Boilerplate/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/gfranko/Backbone-Require-Boilerplate/blob/master/LICENSE-MIT"
-    }
-  ],
   "main": "./server/server",
   "keywords": [
-    "Backbone.js",
-    "Require.js",
-    "Backbone and Require Boilerplate"
+    "node",
+    "express",
+    "hogan",
+    "i18n"
   ],
   "devDependencies": {
     "express": "~4.0.0",
     "morgan": "~1.0.0",
-    "body-parser": "~1.0.0",
+    "body-parser": "~1.3.0",
     "method-override": "~1.0.0",
-    "errorhandler": "~1.0.0",
-    "grunt": "~0.4.1",
-    "grunt-contrib-requirejs": "~0.4.0",
-    "grunt-contrib-jshint": "~0.3.0",
-    "uglify-js": "~2.2.0",
-    "grunt-template-jasmine-istanbul": "~0.2.4",
-    "grunt-template-jasmine-requirejs": "~0.1.3",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-cucumber": "~0.2.1",
-    "chai": "~1.7.2",
-    "grunt-plato": "~0.2.1",
-    "grunt-karma": "~0.6.1",
-    "karma-coverage": "~0.1.0",
-    "webdriverjs": "~0.7.9",
-    "amdclean": "1.x",
-    "grunt-contrib-uglify": "~0.3.2"
+    "error-handler": "~1.0.0",
+    "hogan-express": "~0.5.2",
+    "i18n": "~0.5.0"
   }
 }
