Added bg translation - unfinished.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Guess House Seasons",
-  "title": "node-express-hogan-i18n-example",
+  "name": "node-express-hogan-i18n-example",
+  "title": "Guess House Seasons",
   "description": "Simple node express hogan i18n responsive app example",
   "version": "0.0.1",
   "homepage": "https://github.com/dondido/node-express-hogan-i18n-example",
